deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: load-balancer
  labels:
    app.kubernetes.io/part-of: go-load-balancer
